tests/testcases/errors/BCE0057-1.boo
"""
BCE0057-1.boo(6,9): BCE0057: Primitive 'string' can't be redefined.
BCE0057-1.boo(6,27): BCE0057: Primitive 'int' can't be redefined.
BCE0057-1.boo(7,5): BCE0057: Primitive 'bool' can't be redefined.
"""
def say(string as string, int as int):
	bool as double = 3.0
